# R-Data

./: .env.example  .gitignore  .gitmodules  AGENTS.md  BUILD_PLAN.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TODO.md  sample_data.csv  setup_api_key.sh  test.sh  test_api.sh
src/: config.rs  conversation.rs  main.rs  runner.rs
src/ai/: agent.rs  client.rs  mod.rs
src/client/: glm.rs  mod.rs
src/data/: analysis.rs  ingestion.rs  mod.rs
src/tools/: definitions.rs  mod.rs  search.rs
src/ui/: components.rs  loading.rs  mod.rs  tui.rs
src/viz/: availability.rs  engine.rs  mod.rs  types.rs
