[package]
name = "r-data-agent"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = { version = "0.28", features = ["bracketed-paste"] }
polars = { version = "0.44", features = ["lazy", "csv", "json", "dtype-full"] }
plotters = "0.3"
plotters-svg = "0.3"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
unicode-width = "0.2"
chrono = "0.4"
dirs = "5.0"
toml = "0.8"
calamine = "0.26"
shellexpand = "3.1"
tempfile = "3.14"
opener = "0.7"
statrs = "0.16"
